NN_training/run_training/Improved_run_Experiments/Bash_Scripts/outputs/120_steps.23573168.l004.out
Traceback (most recent call last):
  File "run_simple_big_data_120.py", line 4, in <module>
    import src.ml_train_nn_big_data as ml_train_nn
  File "../../src/ml_train_nn_big_data.py", line 139
    variables = xr.open_mfdataset(trainfile, , chunks=chunk)
                                             ^
SyntaxError: invalid syntax
